manifests/kind/apps/paperless-ngx/apps_v1_deployment_paperless-ngx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: paperless-ngx
      app.kubernetes.io/instance: paperless-ngx
      app.kubernetes.io/name: paperless-ngx
      app.kubernetes.io/part-of: paperless-ngx
  template:
    metadata:
      labels:
        app.kubernetes.io/component: paperless-ngx
        app.kubernetes.io/instance: paperless-ngx
        app.kubernetes.io/name: paperless-ngx
        app.kubernetes.io/part-of: paperless-ngx
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/component: paperless-ngx
                app.kubernetes.io/instance: paperless-ngx
                app.kubernetes.io/name: paperless-ngx
                app.kubernetes.io/part-of: paperless-ngx
            topologyKey: kubernetes.io/hostname
      containers:
      - env:
        - name: PAPERLESS_DBHOST
          valueFrom:
            secretKeyRef:
              key: host
              name: paperless-ngx-db-app
        - name: PAPERLESS_DBPORT
          valueFrom:
            secretKeyRef:
              key: port
              name: paperless-ngx-db-app
        - name: PAPERLESS_DBNAME
          valueFrom:
            secretKeyRef:
              key: dbname
              name: paperless-ngx-db-app
        - name: PAPERLESS_DBUSER
          valueFrom:
            secretKeyRef:
              key: username
              name: paperless-ngx-db-app
        - name: PAPERLESS_DBPASS
          valueFrom:
            secretKeyRef:
              key: password
              name: paperless-ngx-db-app
        image: ghcr.io/paperless-ngx/paperless-ngx:2.14.7@sha256:2a6d9f6461ad7e8335f5b2123a173b9e6002fda209af8a66483b0c00629569ab
        name: paperless-ngx
        ports:
        - containerPort: 8000
          protocol: TCP
        readinessProbe:
          httpGet:
            port: 8000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts:
        - mountPath: /usr/src/paperless/data
          name: data
        - mountPath: /usr/src/paperless/media
          name: media
        - mountPath: /bundle.pem
          name: ca-bundle
          subPath: bundle.pem
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: paperless-ngx-data
      - name: media
        persistentVolumeClaim:
          claimName: paperless-ngx-media
      - configMap:
          name: paperless-ngx-cluster-ca
        name: ca-bundle
