manifests/kind/apps/paperless-ngx/v1_service_paperless-ngx-tika.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: tika
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/name: paperless-ngx-tika
    app.kubernetes.io/part-of: paperless-ngx
  name: paperless-ngx-tika
  namespace: paperless-ngx
spec:
  ports:
  - name: tika
    port: 9998
  selector:
    app.kubernetes.io/component: tika
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/name: paperless-ngx-tika
    app.kubernetes.io/part-of: paperless-ngx
