manifests/kind/apps/paperless-ngx/gateway.networking.k8s.io_v1_gateway_paperless-ngx.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca
  labels:
    app.kubernetes.io/component: paperless-ngx
    app.kubernetes.io/instance: paperless-ngx
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    annotations:
      metallb.universe.tf/loadBalancerIPs: 172.18.0.8
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: paperless.172.18.0.8.nip.io
    name: paperless-ngx
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: paperless-gateway-tls
      mode: Terminate
